Agregando mas funciones

--- a/src/componentes/Equipo/Equipo.css
+++ b/src/componentes/Equipo/Equipo.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     text-align: center;
     font-size: 32px;
+    position: relative;
     
 }
 
@@ -19,4 +20,10 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+}
+
+.input-color{
+    position: absolute;
+    top: 20px;
+    right: 50px;
 }
